# AsynchronousGA2022

./: README.md
AsynchronousGA2022/: makefile
AsynchronousGA2022/AsynchronousGA2022/: CMakeLists.txt
AsynchronousGA2022/AsynchronousGA2022Qt/: AsynchronousGAQtWidget.cpp  AsynchronousGAQtWidget.cpp.bak  AsynchronousGAQtWidget.h  AsynchronousGAQtWidget.ui  CMakeLists.txt  DataFile.h  GAParametersDialog.cpp  GAParametersDialog.ui  MergeXML.cpp  MergeXML.h  ParseXML.cpp  ParseXML.h  TextEditDialog.cpp  XMLContainer.cpp  XMLContainer.h  XMLConverter.cpp  XMLConverter.h  main.cpp
AsynchronousGA2022/src/: DataFile.cpp  GAASIO.cpp  GAASIO.h  Genome.cpp  Genome.h  Population.cpp  Population.h  Preferences.cpp  Preferences.h  XMLConverter.cpp  XMLConverter.h
